[package]
name = "bevy_stability_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = [
  "dynamic_linking",
  "http",
  "https",
  "web_asset_cache",
  "webgpu",
] }
wasm-bindgen = "0.2.108"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O3']
