[package]
name = "bevy_stability_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = [
  "webgpu",
] }
wasm-bindgen = "0.2.108"

[profile.release]
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = false
